--- a/Websocket/Websocket.vcxproj
+++ b/Websocket/Websocket.vcxproj
@@ -116,9 +116,11 @@
   <ItemGroup>
     <ClCompile Include="SHA1.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="WebSocketServer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SHA1.hpp" />
+    <ClInclude Include="WebSocketServer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
