--- a/Websocket/Websocket.vcxproj.filters
+++ b/Websocket/Websocket.vcxproj.filters
@@ -21,10 +21,16 @@
     <ClCompile Include="SHA1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WebSocketServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SHA1.hpp">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WebSocketServer.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
